# due-diligence-extractor

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/: dev-ci-cd.yml
.github/workflows/: dev-ci-cd.yml
config/: README.md  fields.json
examples/electrical_design/: PC2 Solar.kmz
scripts/: ai_doc_reader.py
src/ddx/: cli.py  orchestrator.py
src/ddx/api/: main.py
src/ddx/config/: fields.py
src/ddx/evaluator/: brand_compliance.py
src/ddx/ingestion/: files.py  ocr.py  pdf.py
src/ddx/kmz/: reader.py
src/ddx/llm/: client.py
src/ddx/prompts/: single_doc.py  synth.py
src/ddx/reducer/: normalize.py  policy.py
src/ddx/storage/: json_store.py
src/ddx/utils/: json.py  progress.py
